--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -11,10 +11,8 @@
 
 <div class="moviegrid mx-4">
     <% @lists.each do |list|  %>
-      <div class="card-category moviechild" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(https://images.unsplash.com/photo-1543536448-d209d2d13a1c?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1740&q=80)">
+      <div class="card-category moviechild" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(<%= list.picture %>)">
         <%= link_to "#{list.name}", list_path(list) %>
       </div>
     <% end %>
 </div>
-
-
