--- a/app/views/lists/new.html.erb
+++ b/app/views/lists/new.html.erb
@@ -4,5 +4,6 @@ Create a new list
 
 <%= simple_form_for(@list) do |f| %>
   <%= f.input :name %>
+  <%= f.input :picture %>
   <%= f.submit %>
 <% end %>
