--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -1,11 +1,10 @@
-<div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(https://images.unsplash.com/photo-1585647347384-2593bc35786b?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1770&q=80);">
+<div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(<%= @list.picture %>);">
   <div class="container">
     <h1> <%= @list.name %></h1>
   </div>
 </div>
 <br>
 <div class="bookmarkgrid mx-4">
-  <div class="container mb-3">
     <% @list.bookmarks.each do |bookmark| %>
     <div class="card mb-3" style="max-width: 540px;">
       <div class="row no-gutters">
@@ -23,7 +22,6 @@
       </div>
     </div>
     <% end %>
-  </div>
 </div>
 <br>
 
